# kpsr-codegen

./: .gitignore  .gitmodules  MANIFEST.in  README.md  cpp_testing_build.sh.in  setup.cfg  setup.py
.github/workflows/: prcodecheck.yml  push.yml
cpp_testing/: CMakeLists.txt
cpp_testing/modules/: CMakeLists.txt
cpp_testing/modules/codegen/: CMakeLists.txt
cpp_testing/modules/codegen/include/klepsydra/codegen/: old_enum.h
cpp_testing/modules/codegen/kidl_test1/: gps.yaml  imu.yaml  quaternion.yaml  vector3.yaml
cpp_testing/modules/codegen/kidl_test2/: primitive_types_array.yaml  primitive_types_basic.yaml  primitive_types_vector.yaml  primitive_types_vector_pointer.yaml  primitive_types_vector_shared_pointer.yaml
cpp_testing/modules/codegen/kidl_test3/: composition_type.yaml  header.yaml  vector3.yaml  vector4.yaml
cpp_testing/modules/codegen/kidl_test4/: vector4.yaml
cpp_testing/modules/codegen/kidl_test5/: composition_type_related.yaml  related_class.yaml
cpp_testing/tests/: CMakeLists.txt
cpp_testing/tests/codegen_tests/: CMakeLists.txt
cpp_testing/tests/codegen_tests/src/: event_emitter_test1.cpp  event_emitter_test2.cpp  event_emitter_test3.cpp  event_emitter_test4.cpp  event_emitter_test5.cpp  main.cpp
cpp_testing/tests/dds_codegen_tests_1_2/: CMakeLists.txt
cpp_testing/tests/dds_codegen_tests_1_5/: CMakeLists.txt
cpp_testing/tests/dds_codegen_tests_1_5/src/: ddstg_codegen_test5.cpp
cpp_testing/tests/dds_codegen_tests_3_4/: CMakeLists.txt
cpp_testing/tests/dds_codegen_tests_3_4/src/: ddsstg_codegen_test3.cpp  ddsstg_codegen_test4.cpp
cpp_testing/tests/kpsr_ros_codegen/: CMakeLists.txt  package.xml
cpp_testing/tests/kpsr_ros_codegen/include/kpsr_ros_codegen/: composition_type_related_ros_mapper.h  composition_type_ros_mapper.h  gps_ros_mapper.h  header_ros_mapper.h  imu_ros_mapper.h  inheritance_vector4_ros_mapper.h  point_ros_mapper.h  pose_ros_mapper.h  pose_stamped_ros_mapper.h  primitive_types_array_ros_mapper.h  primitive_types_basic_ros_mapper.h  primitive_types_vector_pointer_ros_mapper.h  primitive_types_vector_ros_mapper.h  primitive_types_vector_shared_ptr_ros_mapper.h  quaternion_ros_mapper.h  vector3_ros_mapper.h  vector4_ros_mapper.h
cpp_testing/tests/kpsr_ros_codegen/msg/: CompositionType.msg  CompositionTypeRelated.msg  InheritanceVector4.msg  PrimitiveTypesArray.msg  PrimitiveTypesBasic.msg  PrimitiveTypesVectorPointer.msg  Vector4.msg
cpp_testing/tests/kpsr_ros_codegen/test/: kpsr_ros_codegen_test1.cpp  kpsr_ros_codegen_test2.cpp  kpsr_ros_codegen_test3.cpp  kpsr_ros_codegen_test4.cpp  kpsr_ros_codegen_test5.cpp
cpp_testing/tests/zmq_codegen_tests/: CMakeLists.txt
cpp_testing/tests/zmq_codegen_tests/include/: temperature.h  temperature_serializer.h  weather_data.h  weather_data_serializer.h
cpp_testing/tests/zmq_codegen_tests/src/: zmqstg_codegen_test1.cpp  zmqstg_codegen_test2.cpp  zmqstg_codegen_test3.cpp  zmqstg_codegen_test4.cpp  zmqstg_codegen_test5.cpp
kpsr_codegen/: CMakeLists.txt  __main__.py
kpsr_codegen/cmake/: KpsrCodeGen.cmake
kpsr_codegen/generator/: generator_engine.py
kpsr_codegen/kidl_data/: middleware_definition.py  middleware_type.py
kpsr_codegen/preprocessor/: configuration.py  middleware_preprocessor.py
