[metadata]
name = kpsr_codegen
version = 1.0

[options]
install_requires = 
        Jinja2
        PyYaml

packages = find:
author = Klepsydra
author_email = support@klepsydra.com
description = Klepsydra SDK Code Generator
license = Apache License
python_requires= >=3.6
include_package_data = True
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts = 
    kpsr_codegen = kpsr_codegen.__main__:main

[options.packages.find]
exclude = tests*